force-app/main/default/objects/History_Tracking_Config__mdt/History_Tracking_Config__mdt.object-meta.xml
<CustomObject>
    <label>History Tracking Config</label>
    <pluralLabel>History Tracking Configs</pluralLabel>
</CustomObject>