force-app/main/default/objects/History_Tracking_Config__mdt/fields/Field_Name_API__c.field-meta.xml
<CustomField>
    <fullName>Field_Name_API__c</fullName>
    <label>Field Name API</label>
    <length>100</length>
    <type>Text</type>
</CustomField>