force-app/main/default/objects/History_Tracking_Config__mdt/fields/Lookup_API__c.field-meta.xml
<CustomField>
    <fullName>Lookup_API__c</fullName>
    <label>Lookup API</label>
    <length>100</length>
    <type>Text</type>
</CustomField>