force-app/main/default/objects/History_Tracking_Config__mdt/fields/New_Value_API__c.field-meta.xml
<CustomField>
    <fullName>New_Value_API__c</fullName>
    <label>New Value API</label>
    <length>100</length>
    <type>Text</type>
</CustomField>