force-app/main/default/objects/History_Tracking_Config__mdt/fields/Old_Value_API__c.field-meta.xml
<CustomField>
    <fullName>Old_Value_API__c</fullName>
    <label>Old Value API</label>
    <length>100</length>
    <type>Text</type>
</CustomField>